load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "coverage_test_srcs",
    srcs = ["coverage_source.ts"],
)

jasmine_node_test(
    name = "coverage_test",
    srcs = [
        "coverage.spec.js",
        ":coverage_test_srcs",
    ],
)
