load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")

ts_library(
    name = "coverage_test_srcs",
    srcs = ["coverage_source.ts"],
)

jasmine_node_test(
    name = "coverage_test",
    srcs = [
        "coverage.spec.js",
        ":coverage_test_srcs",
    ],
)

# Verify that the error code is propogated out from a failing spec
# when coverage is on
jasmine_node_test(
    name = "fail_test",
    srcs = ["fail.spec.js"],
    expected_exit_code = 3,
)
