load("@rules_nodejs//:index.bzl", "nodejs_test")

# Test for regressions to https://github.com/bazelbuild/rules_nodejs/issues/428
# and https://github.com/bazelbuild/rules_nodejs/issues/438.
nodejs_test(
    name = "test",
    data = [
        "index.spec.js",
        "@npm//webpack",
    ],
    entry_point = ":index.spec.js",
)
