load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

jasmine_node_test(
    name = "test",
    srcs = ["test.spec.js"],
)

jasmine_node_test(
    name = "shared_env_test",
    srcs = ["jasmine_shared_env_test.spec.js"],
    data = ["jasmine_shared_env_bootstrap.js"],
    templated_args = [
        "--node_options=--require=$$(rlocation $(rootpath :jasmine_shared_env_bootstrap.js))",
    ],
    deps = [
        "@npm//jasmine",
        "@npm//jasmine-core",
        "@npm//zone.js",
    ],
)
