# Dummy test target that imports various targets from the
# "@nodejs" repository. If a target of the repository is
# misconfigured, Bazel will complain about missing input files.
sh_test(
    name = "test_default",
    srcs = ["test.sh"],
    data = [
        "@nodejs//:node",
        "@nodejs//:node_bin",
        "@nodejs//:node_files",
        "@nodejs//:npm",
        "@nodejs//:npm_bin",
        "@nodejs//:npm_files",
    ],
)

# Additional targets to test the use of parallel node toolchains
[
    sh_test(
        name = "test_" + id,
        srcs = ["test.sh"],
        data = [
            "@%s_host//:node" % id,
            "@%s_host//:node_bin" % id,
            "@%s_host//:node_files" % id,
            "@%s_host//:npm" % id,
            "@%s_host//:npm_bin" % id,
            "@%s_host//:npm_files" % id,
            "@%s_host//:npx_bin" % id,
        ],
    )
    for id in [
        "node14",
        "node16_nvmrc",
    ]
]
