"bzlmod dependencies"

module(
    name = "rules_nodejs_smoke_test",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_nodejs", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.30.2", dev_dependency = True)

local_path_override(
    module_name = "rules_nodejs",
    path = "../..",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

# Note, this gets the default version of Node.js from
# https://github.com/bazelbuild/rules_nodejs/blob/5.8.0/nodejs/repositories.bzl#L11
node.toolchain()
node.toolchain(
    name = "node16",
    node_version = "16.5.0",
)

# TODO: nvmrc test like WORKSPACE?

# FIXME(6.0): a repo rule with name=foo should create a repo named @foo, not @foo_toolchains
use_repo(
    node,
    "node16_darwin_amd64",
    "node16_linux_amd64",
    "node16_toolchains",
    "node16_windows_amd64",
    "nodejs_darwin_amd64",
    "nodejs_linux_amd64",
    "nodejs_windows_amd64",
)
