"bzlmod dependencies"

module(
    name = "rules_nodejs_smoke_test",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_nodejs", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.30.2", dev_dependency = True)

local_path_override(
    module_name = "rules_nodejs",
    path = "../..",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

# Note, this gets the default version of Node.js from
# https://github.com/bazelbuild/rules_nodejs/blob/5.8.0/nodejs/repositories.bzl#L11
node.toolchain()
node.toolchain(
    name = "node14",
    node_version = "14.19.0",
)
node.toolchain(
    name = "node16_nvmrc",
    node_version_from_nvmrc = "//:.nvmrc",
)

# FIXME(6.0): a repo rule with name=foo should create a repo named @foo, not @foo_toolchains
use_repo(
    node,
    "node16_nvmrc_darwin_amd64",
    "node16_nvmrc_linux_amd64",
    "node16_nvmrc_toolchains",
    "node16_nvmrc_windows_amd64",
    "node14_darwin_amd64",
    "node14_linux_amd64",
    "node14_toolchains",
    "node14_windows_amd64",
)
