bazel_dep(name = "rules_nodejs", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_nodejs",
    path = "../..",
)

bazel_dep(name = "bazel_lib", version = "3.0.0-beta.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)

# Note, this gets the default version of Node.js from
# https://github.com/bazel-contrib/rules_nodejs/blob/5.8.0/nodejs/repositories.bzl#L11
node.toolchain()
node.toolchain(
    name = "node16",
    node_version = "16.20.2",
)
node.toolchain(
    name = "node16_nvmrc",
    node_version_from_nvmrc = "//:.nvmrc",
)
node.toolchain(
    name = "node17_custom",
    node_repositories = {
        "17.0.1.custom-darwin_arm64": ("node-v17.0.1-darwin-arm64.tar.gz", "node-v17.0.1-darwin-arm64", "b49c65be9112f7e5de4e39f4f01e541ee73b3d28d3e2bbd3ea85a86952d0dc2d"),
        "17.0.1.custom-darwin_amd64": ("node-v17.0.1-darwin-x64.tar.gz", "node-v17.0.1-darwin-x64", "0dfe6f904f3f20652e3d34c60885b790603f120d5d51a53031355827a4eaf6a9"),
        "17.0.1.custom-linux_arm64": ("node-v17.0.1-linux-arm64.tar.xz", "node-v17.0.1-linux-arm64", "6cbd83ba5778a1af740a152839026cbd068610ec6e5ebf67739e546eba426171"),
        "17.0.1.custom-linux_ppc64le": ("node-v17.0.1-linux-ppc64le.tar.xz", "node-v17.0.1-linux-ppc64le", "3f5665b92bce8c81caf35d1b0e10f59594499c8e5afeb8a12e101dd7dc62e6ed"),
        "17.0.1.custom-linux_s390x": ("node-v17.0.1-linux-s390x.tar.xz", "node-v17.0.1-linux-s390x", "df8c44e3f10c14924a2b78530a6dd9e08557bc6694bc6342f18cd4fbdca30dfb"),
        "17.0.1.custom-linux_amd64": ("node-v17.0.1-linux-x64.tar.xz", "node-v17.0.1-linux-x64", "30484910d6a25c96902f329c1fdfb753ddff9bf8c65a6e5ec5c818bac8135953"),
        "17.0.1.custom-windows_amd64": ("node-v17.0.1-win-x64.zip", "node-v17.0.1-win-x64", "0b644e2499018884027a0fe5e0e159a18acd33e500c63a89898ba687189f7337"),
    },
    node_urls = ["https://nodejs.org/dist/v17.0.1/{filename}"],
    node_version = "17.0.1.custom",
)

# FIXME(6.0): a repo rule with name=foo should create a repo named @foo, not @foo_toolchains
use_repo(
    node,
    "node16",
    "node16_darwin_amd64",
    "node16_darwin_arm64",
    "node16_linux_amd64",
    "node16_linux_arm64",
    "node16_nvmrc",
    "node16_nvmrc_darwin_amd64",
    "node16_nvmrc_darwin_arm64",
    "node16_nvmrc_linux_amd64",
    "node16_nvmrc_linux_arm64",
    "node16_nvmrc_toolchains",
    "node16_nvmrc_windows_amd64",
    "node16_toolchains",
    "node16_windows_amd64",
    "node17_custom",
    "node17_custom_darwin_amd64",
    "node17_custom_darwin_arm64",
    "node17_custom_linux_amd64",
    "node17_custom_linux_arm64",
    "node17_custom_toolchains",
    "node17_custom_windows_amd64",
    "nodejs",
    "nodejs_darwin_amd64",
    "nodejs_darwin_arm64",
    "nodejs_linux_amd64",
    "nodejs_linux_arm64",
    "nodejs_toolchains",
    "nodejs_windows_amd64",
)
