load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz"],
)

local_repository(
    name = "rules_nodejs",
    path = "../..",
)

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")

# Create the default node toolchain
nodejs_register_toolchains()

# Create additional parallel toolchains using explicit nodejs_register_toolchains targets
nodejs_register_toolchains(
    name = "node16",
    node_version = "16.20.2",
)

nodejs_register_toolchains(
    name = "node16_nvmrc",
    node_version_from_nvmrc = "//:.nvmrc",
)
