load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")

# Dummy test target that imports various targets from the
# "@nodejs" repository. If a target of the repository is
# misconfigured, Bazel will complain about missing input files.
nodejs_test(
    name = "test",
    data = [
        "index.spec.js",
        "@nodejs_linux_amd64//:node",
        "@nodejs_linux_amd64//:node_bin",
        "@nodejs_linux_amd64//:node_files",
        "@nodejs_linux_amd64//:npm",
        "@nodejs_linux_amd64//:npm_bin",
        "@nodejs_linux_amd64//:npm_files",
        "@nodejs_linux_amd64//:npm_node_repositories",
        "@nodejs_linux_amd64//:npx_bin",
        "@nodejs_linux_amd64//:yarn",
        "@nodejs_linux_amd64//:yarn_bin",
        "@nodejs_linux_amd64//:yarn_files",
        "@nodejs_linux_amd64//:yarn_node_repositories",
    ],
    entry_point = ":index.spec.js",
)
